# SAAS-APP

./: .dockerignore  .env.example  .gitignore  AWS_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile.nginx  FEATURE_EVALUATION.md  PRODUCTION_READINESS.md  README.md  USER_GUIDE.md  docker-compose.ssl.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  desktop-build.yml  mobile-build.yml
backend/: .env.example  .sequelizerc  Dockerfile  jest.config.js  package-lock.json  package.json
backend/scripts/: check-indexes.js
backend/src/: index.js
backend/src/config/: database.js  migrationRunner.js  swagger.js
backend/src/middleware/: auditLog.js  auth.js  cache.js  errorHandler.js  guestAuth.js  requestId.js  subscription.js  tenantScope.js
backend/src/migrations/: 20260308000001-initial-schema.js  20260308000002-add-soft-delete.js  (+13 more)
backend/tests/: helpers.js  setup.js
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  offline.rs
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
nginx/: hotelsaas-ec2.conf  nginx-ssl.conf  nginx.conf
scripts/: backup-db.sh  ec2-deploy.sh  ec2-setup.sh  ec2-setup2.sh  fix-column.sql
web-admin/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-admin/src/: App.jsx  index.css  main.jsx
(+176 files in other folders)
